Added end to end test cases for api routes

--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "A decentralized application on Ethereum blockchain",
   "main": "server.ts",
   "scripts": {
-    "start": "npm run build && node dist/server.js",
+    "prestart": "node dist/check-env MONGODB_URL ETHEREUM_PROVIDER_WS PRIVATE_KEY",
+    "start": "npm run build && node dist/src/server.js",
     "build": "yarn prepare && yarn rm-dist && yarn build-ts && yarn copy-assets",
-    "serve": "node dist/server.js",
+    "serve": "node dist/src/server.js",
+    "test": "npx jest",
     "prepare": "chmod +x ./scripts/*",
-    "watch-node": "nodemon dist/server.js",
+    "watch-node": "nodemon dist/src/server.js",
     "build-ts": "tsc",
     "rm-dist": "./scripts/rm-dist.sh",
     "watch-ts": "tsc -w",
@@ -48,8 +50,17 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.6",
+    "@types/jest": "^29.5.0",
+    "@types/mocha": "^10.0.1",
     "@types/node-fetch": "^2.6.1",
-    "ts-jest": "^26.1.1",
+    "@types/sinon": "^10.0.13",
+    "@types/supertest": "^2.0.12",
+    "cowsay": "^1.5.0",
+    "jest": "^26.6.3",
+    "mongodb-memory-server": "^8.12.1",
+    "sinon": "^15.0.3",
+    "supertest": "^6.3.3",
+    "ts-jest": "^26.5.6",
     "ts-node": "^8.10.2",
     "ts-watch": "^1.0.8",
     "tsc-watch": "^4.2.8",
