--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prestart": "npm run build && node dist/check-env MONGODB_URL ETHEREUM_PROVIDER_WS PRIVATE_KEY",
     "start": "node dist/src/server.js",
-    "build": "yarn prepare && yarn rm-dist && yarn build-ts && yarn copy-assets",
+    "build": "npm run prepare && npm run rm-dist && npm run build-ts && npm run copy-assets",
     "serve": "node dist/src/server.js",
     "test": "npx jest",
     "prepare": "chmod +x ./scripts/*",
@@ -16,11 +16,11 @@
     "watch-ts": "tsc -w",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
     "copy-assets": "./scripts/copy-assets.sh",
-    "debug": "yarn build && yarn watch:debug",
+    "debug": "npm run build && npm run watch:debug",
     "serve:debug": "nodemon --inspect dist/server.js",
-    "watch:debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"yarn watch-ts\" \"yarn serve:debug\"",
-    "code:check": "yarn code:lint; yarn code:format --check",
-    "code:clean": "yarn code:lint --fix; yarn code:format --write",
+    "watch:debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve:debug\"",
+    "code:check": "npm run code:lint; npm run code:format --check",
+    "code:clean": "npm run code:lint --fix; npm run code:format --write",
     "code:lint": "eslint --ext .js,.jsx,.ts,.tsx \"src/\"",
     "code:format": "prettier './src/**/**.{js,jsx,ts,tsx}'",
     "code:check:rules": "eslint --print-config .eslintrc.js | eslint-config-prettier-check"
