--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "randomatic": "^3.1.1",
     "uuid": "^8.3.2",
     "web3": "^1.9.0",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "cowsay": "^1.5.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -58,7 +59,6 @@
     "@types/node-fetch": "^2.6.1",
     "@types/sinon": "^10.0.13",
     "@types/supertest": "^2.0.12",
-    "cowsay": "^1.5.0",
     "jest": "^26.6.3",
     "mongodb-memory-server": "^8.12.1",
     "sinon": "^15.0.3",
