--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "cowsay": "^1.5.0",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "joi": "^17.3.0",
@@ -46,10 +47,10 @@
     "mongoose-paginate-v2": "^1.3.14",
     "node-fetch": "^2.6.7",
     "randomatic": "^3.1.1",
+    "serverless-http": "^3.2.0",
     "uuid": "^8.3.2",
     "web3": "^1.9.0",
-    "winston": "^3.3.3",
-    "cowsay": "^1.5.0"
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
