Updated server.js to index.js

--- a/package.json
+++ b/package.json
@@ -2,22 +2,22 @@
   "name": "decentralized-ethereum-app",
   "version": "1.0.0",
   "description": "A decentralized application on Ethereum blockchain",
-  "main": "server.ts",
+  "main": "index.ts",
   "scripts": {
     "prestart": "node dist/check-env MONGODB_URL ETHEREUM_PROVIDER_WS PRIVATE_KEY",
-    "start": "node dist/src/server.js",
+    "start": "node dist/src/index.js",
     "build": "npm run prepare && npm run rm-dist && npm run build-ts && npm run copy-assets",
-    "serve": "node dist/src/server.js",
+    "serve": "node dist/src/index.js",
     "test": "npx jest",
     "prepare": "chmod +x ./scripts/*",
-    "watch-node": "nodemon dist/src/server.js",
+    "watch-node": "nodemon dist/src/index.js",
     "build-ts": "tsc",
     "rm-dist": "./scripts/rm-dist.sh",
     "watch-ts": "tsc -w",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
     "copy-assets": "./scripts/copy-assets.sh",
     "debug": "npm run build && npm run watch:debug",
-    "serve:debug": "nodemon --inspect dist/server.js",
+    "serve:debug": "nodemon --inspect dist/index.js",
     "watch:debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve:debug\"",
     "code:check": "npm run code:lint; npm run code:format --check",
     "code:clean": "npm run code:lint --fix; npm run code:format --write",
